[FIX]Web, Statusbar: Fixed the issue of statubar in chrome is aligned, it is aligned in inline block.
bzr revid: msh@openerp.com-20140213115556-irdodahpw0atgy5u

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -1711,6 +1711,7 @@ $sheet-padding: 16px
     // FormView.header {{{
     .oe_form header
         position: relative
+        overflow: hidden
         border-bottom: 1px solid #cacaca
         padding-left: 2px
         @include vertical-gradient(#fcfcfc, #dedede)
